@@ -1,3 +1,6 @@
+2020-02-19  Kirit Saelensminde  <kirit@felspar.com>
+ Improve the memory efficiency of `push_back` and `insert` into `json` structures.
+
 2020-02-13  Kirit Saelensminde  <kirit@felspar.com>
  Deprecate use of some old smart pointers that now have better alternatives.
 
